--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,36 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Controllers.LiquidActivity" android:parentActivityName=".Controllers.ServiceActivity"/>
-        <activity android:name=".Controllers.TimeActivity" android:parentActivityName=".Controllers.ServiceActivity"/>
-        <activity android:name=".Controllers.WeightActivity" android:parentActivityName=".Controllers.ServiceActivity"/>
-        <activity android:name=".Controllers.DistanceActivity" android:parentActivityName=".Controllers.ServiceActivity"/>
-        <activity android:name=".Controllers.ServiceActivity" android:parentActivityName=".Controllers.MainActivity" />
+        <activity android:name=".Controllers.LiquidHActivity"
+            android:parentActivityName=".Controllers.LiquidActivity" />
+        <activity android:name=".Controllers.LiquidCActivity"
+            android:parentActivityName=".Controllers.LiquidActivity" />
+        <activity android:name=".Controllers.TimeHActivity"
+            android:parentActivityName=".Controllers.TimeActivity" />
+        <activity android:name=".Controllers.TimeCActivity"
+            android:parentActivityName=".Controllers.TimeActivity" />
+        <activity android:name=".Controllers.WeightHActivity"
+            android:parentActivityName=".Controllers.WeightActivity" />
+        <activity android:name=".Controllers.WeightCActivity"
+            android:parentActivityName=".Controllers.WeightActivity" />
+        <activity android:name=".Controllers.DistanceHActivity"
+            android:parentActivityName=".Controllers.DistanceActivity" />
+        <activity android:name=".Controllers.DistanceCActivity"
+            android:parentActivityName=".Controllers.DistanceActivity" />
+        <activity android:name=".Controllers.LiquidActivity"
+            android:parentActivityName=".Controllers.ServiceActivity" />
+        <activity
+            android:name=".Controllers.TimeActivity"
+            android:parentActivityName=".Controllers.ServiceActivity" />
+        <activity
+            android:name=".Controllers.WeightActivity"
+            android:parentActivityName=".Controllers.ServiceActivity" />
+        <activity
+            android:name=".Controllers.DistanceActivity"
+            android:parentActivityName=".Controllers.ServiceActivity" />
+        <activity
+            android:name=".Controllers.ServiceActivity"
+            android:parentActivityName=".Controllers.MainActivity" />
         <activity android:name=".Controllers.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
